--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <main>
         <article class="box">
             <h1>Diwash Sapkota</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <div><a href="mailto:diwash.sapkota7777@gmail.com">diwash[dot]sapkota7777[@]gmail.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/diwash-sapkota">@diwash-sapkota</a></li>
+                    <li><a href="https://linkedin.com/in/diwashsapkota">@diwashsapkota</a></li>
                 </ul>    
             </section>
             
@@ -31,12 +30,12 @@
                 <div class="education">
                     <h2>
                         <i class="fa fa-certificate" aria-hidden="true"></i>
-                        School name
+                        St. Xavier's College
                     </h2>
                     <h3>Major</h3>
                     <ul>
-                        <li>GPA: 4.0</li>
-                        <li>Years</li>
+                        <li>Average Score: 78%</li>
+                        <li>Expected Completion Date: December, 2022</li>
                     </ul>
                 </div>
             </section>
@@ -52,6 +51,7 @@
                     <li>JavaScript</li>
                     <li>Git</li>
                     <li>Visual Studio Code</li>
+                    <li>ASP[dot]NET Web Framework</li>
                 </ul>
             </section>
         </article>
@@ -63,8 +63,8 @@
                 </h2>
                 <h3>Microsoft Learn Student Ambassador</h3>
                 <ul>
-                    <li>Some skill</li>
-                    <li>Another skill</li>
+                    <li>Microsoft Power Apps</li>
+                    <li>Azure Cognitive Services</li>
                 </ul>
             </section>
             <section class="box">
@@ -73,9 +73,9 @@
                     Internships
                 </h2>
 
-                <h3>Company name</h3>
+                <h3>Nepgeeks Technology</h3>
                 <ul>
-                    <li>Accomplishment</li>
+                    <li>Dotnet Intern</li>
                     <li>Another accomplishment</li>
                 </ul>
             </section>
