--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,9 @@
                 <h3>Nepgeeks Technology</h3>
                 <ul>
                     <li>Dotnet Intern</li>
-                    <li>Another accomplishment</li>
+                    <li>Worked on Pardarshi Accounting Software</li>
+                    <li>Made the software mobile responsive</li>
+                    <li>Created a Vendor Management Form/Dashboard for Shangri-la Development Bank</li>
                 </ul>
             </section>
             <section class="box">
@@ -85,11 +87,10 @@
                     Projects
                 </h2>
                 
-                <h3>Great hackathon</h3>
-                <div>This was a great hack!</div>
+                <h3>Online Library Management Software</h3>
+                <div>A web form for managing books, members, authors and publishers for Library.</div>
                 <ul>
-                    <li>Cool technology used</li>
-                    <li>Prize won</li>
+                    <li>Used Asp.net and Microsoft SQL Server for development</li>
                 </ul>
             </section>
         </article>
