--- a/src/index.html
+++ b/src/index.html
@@ -23,48 +23,40 @@
         <nav>
             <h2 class="logo">Portfo<span>lio</span></h2>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#service">Services</a></li>
             </ul>
-            <a href="#" class="btn">Subscribe</a>
+            <a href="#contact" class="btn">Contact</a>
         </nav>
 
         <div class="content">
             <h4>Hello, my name is</h4>
             <h1>Diwash <span>Sapkota</span></h1>
             <h3>I'am a Web Developer.</h3>
-            <div class="newslatter">
-                <form action="https://formspree.io/f/xnqwgbwr" method="POST">
-                    <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="true">
-                    <input type="submit" name="submit" value="Lets Start">
-                </form>
-            </div>
         </div>
     </div>
 
     <!----About section start---->
-    <section class="about">
+    <section id="about" class="about">
         <div class="main">
             <img src="img/main.jpg">
             <div class="about-text">
                 <h2>About Me</h2>
-                <h5>Developer <span>& Designer</span></h5>
+                <h5>Graphic/Web <span>Designer & Developer</span></h5>
                 <p>I am a front-end web developer. I can provide clean code and pixel perfect design. I also make the
                     website more & more interactive with web animations.I can provide clean code and pixel perfect
                     design. I also make the website more & more interactive with web animations.A responsive design
                     makes your website accessible to all users, regardless of their device.</p>
-                <button href="#" type="button">Let's Talk</button>
+                <button href="#contact" type="button">Let's Talk</button>
             </div>
         </div>
     </section>
 
     <!-----service section start----------->
-    <div class="service">
+    <div id="service" class="service">
         <div class="title">
-            <h2>Our Services</h2>
+            <h2>Services</h2>
         </div>
 
         <div class="box">
@@ -96,10 +88,9 @@
 
             <div class="card">
                 <i class="far fa-bell"></i>
-                <h5>Web Development</h5>
+                <h5>Graphic Design</h5>
                 <div class="pra">
-                    <p>Every website should be built with two primary goals: Firstly, it needs to work across all
-                        devices. Secondly, it needs to be fast as possible.</p>
+                    <p>Creativity is one of if not the most important graphic design skills. Designs should be clean, attractive and should convey the intended message clearly.</p>
 
                     <p style="text-align: center;">
                         <a class="button" href="#">Read More</a>
@@ -110,21 +101,27 @@
     </div>
 
     <!------Contact Me------>
-    <div class="contact-me">
-        <p>Let Me Get You A Beautiful Website.</p>
-        <a class="button-two" href="#">Hire Me</a>
+    <div id="contact" class="contact-me">
+        <div class="newsletter">
+            <p style="text-align: center;">Have a Project?</p>
+
+            <form action="https://formspree.io/f/xnqwgbwr" method="POST">
+                <input type="email" name="_replyto" id="email-address" placeholder="email@domain.tld" required="true">
+                <input class="button-two" type="submit" name="submit" value="Let's Talk">
+            </form>
+        </div>
     </div>
 
     <!------footer start--------->
     <footer>
         <p>Diwash Sapkota</p>
-        <p>For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:</p>
+        <p>For more details, please click on the links below:</p>
         <div class="social">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
-            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/diwash.sapk0ta/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://linkedin.com/in/diwashsapkota" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://github.com/diwashsapkota" target="_blank"><i class="fab fa-github"></i></a>
         </div>
-        <p class="end">CopyRight By Diwash Sapkota</p>
+        <p class="end">Copyright By Diwash Sapkota</p>
     </footer>
 </body>
 
