--- a/src/index.html
+++ b/src/index.html
@@ -61,42 +61,42 @@
 
         <div class="box">
             <div class="card">
-                <i class="fas fa-bars"></i>
+                <i class="fas fa-globe"></i>
                 <h5>Web Development</h5>
                 <div class="pra">
                     <p>Every website should be built with two primary goals: Firstly, it needs to work across all
                         devices. Secondly, it needs to be fast as possible.</p>
 
                     <p style="text-align: center;">
-                        <a class="button" href="#">Read More</a>
+                        <a class="button" href="#contact">Hire Me</a>
                     </p>
                 </div>
             </div>
-
             <div class="card">
-                <i class="far fa-user"></i>
-                <h5>Web Development</h5>
-                <div class="pra">
-                    <p>Every website should be built with two primary goals: Firstly, it needs to work across all
-                        devices. Secondly, it needs to be fast as possible.</p>
-
-                    <p style="text-align: center;">
-                        <a class="button" href="#">Read More</a>
-                    </p>
-                </div>
-            </div>
-
-            <div class="card">
-                <i class="far fa-bell"></i>
+                <i class="fas fa-palette"></i>
                 <h5>Graphic Design</h5>
                 <div class="pra">
-                    <p>Creativity is one of if not the most important graphic design skills. Designs should be clean, attractive and should convey the intended message clearly.</p>
-
+                    <p>Creativity is one of if not the most important graphic design skills. Designs should be clean, attractive and
+                        should convey the intended message clearly.</p>
+            
                     <p style="text-align: center;">
-                        <a class="button" href="#">Read More</a>
+                        <a class="button" href="#contact">Hire Me</a>
                     </p>
                 </div>
             </div>
+            <div class="card">
+                <i class="fas fa-edit"></i>
+                <h5>Content Writing</h5>
+                <div class="pra">
+                    <p>Original, actionable content that solves a query is considered good content. It's well-sourced, unique, succinct, grammatically correct, and well-formatted.</p>
+
+                    <p style="text-align: center;">
+                        <a class="button" href="#contact">Hire Me</a>
+                    </p>
+                </div>
+            </div>
+
+            
         </div>
     </div>
 
