--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
         <div class="content">
             <h4>Hello, my name is</h4>
             <h1>Diwash <span>Sapkota</span></h1>
-            <h3>I'am a Web Developer.</h3>
+            <h3>I'am a Graphic/Web Designer and Developer.</h3>
         </div>
     </div>
 
